5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1785_1598.log
== TEST (2019-05-30 10:04:20) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=q+(p[i]-5)
	s=s+q
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:30) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=p[0]
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=q+(p[i]-5)
	s=s+q
	i=i+1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:57) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=q+(p[i]-5)
	else:
		q=q+p[i]
	s=s+q
	i=i+1
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:21) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=q+(p[i]-5)
	else:
		q=q+p[i]
	s=s+q
	i=i+1
	print(s,q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:06) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=(p[i]-5)
	else:
		q=p[i]
	s=s+q
	i=i+1
	print(s,q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:21) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=(p[i]-5)
	else:
		q=p[i]
	s=s+q
	i=i+1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:31) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=(p[i]-5)
	else:
		q=p[i]
	s=s+q
	i=i+1
print(round(s,2)
-- ERROR:
File "XXXX", line 14
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:37) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=(p[i]-5)
	else:
		q=p[i]
	s=s+q
	i=i+1
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:09:51) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=(p[i]-5)
	else:
		q=p[i]
	s=s+q
	i=i+1
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:10:08) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=(p[i]-5)
	else:
		q=p[i]
	s=s+q
	i=i+1
print(round(s,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:10:25) 
-- CODE:
from numpy import*
p=array(eval(input("insira os custos dos itens: ")))
s=0
q=0
i=0
while i!=size(p):
	if p[i]>80:
		q=(p[i]-5)
	else:
		q=p[i]
	s=s+q
	i=i+1
print(round(s,2))
-- EXECUTION TIME:
0.363212
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
